--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <p>to see branch name use <b>git branch</b> </p>
 <p>to list out branch names use <b>git branch -a branch name</b></p>
 <p>to change branch name use <b>git branch -M branch name</b></p>
+<p>to change the branch use <b>git checkout branch name you want to replace (current branch name) </b></p>
 <p>to add new url <b>git remote add origin url</b> </p>
 <p>to know the status of the file use <b>git status</b></p>
 <p>to get the file modification in github to  personal copy use <b>git pull</b> </p>
