--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
 <p>copy url in code - open terminal in code editor - <b>git clone url </b></p>
 <p>to add files use <b>git add file name </b>- if there is more files to be modified / added use <b>git add</b> .</p>
 <p><b>git add . (files added to staging area) - git commit -m "give commit message" - git push</b> </p>
-<p>to see branch name use <b>git branch</b> </p>
+<p>to add branch name use <b>git branch</b> </p>
 <p>to list out branch names use <b>git branch -a branch name</b></p>
-<p>to change branch name use <b>git branch -M branch name</b></p>
+<p>to add branch name use <b>git branch -M branch name</b></p>
 <p>to change the branch use <b>git checkout branch name you want to replace (current branch name) </b></p>
+<p> if using 2 branchs in git repository to see the difference in 2 different branch use <b>git diff branch name (other than current branch name)</b></p>
+<p> to merge branches use <b>git merge branch name (other than current branch name, that is branch u want to merge the current branch with) - git push origin main(branch name)</b></p>
+<p>if you don't get access to main branch, you can use pull request to head , head will get request - on verification head can merge the branches codes</p>
+<p>instead of <b>git merge</b> we can use pull request in github - click on pull request - create pull request - choose branch to be merged - comment about changes send a request - merge confirm</p>
 <p>to add new url <b>git remote add origin url</b> </p>
 <p>to know the status of the file use <b>git status</b></p>
 <p>to get the file modification in github to  personal copy use <b>git pull</b> </p>
+<p>if added new branch in terminal using <b>git branch -M </b> to get the branch name in github use the normal push <b>git push origin branch name(newly added in terminal)</b></p>
+
 </body>
 </html>
