--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <P>Git install - verify email i'd and password </P>
 <p>open terminal in code editor</p>
 <p>github create account - create repository - create files or drag files </p>
-<p>copy url in code - open terminal in code editor - <b>git clone url </b></p>
+<p> to get codes from github to personal computer copy url in code - open terminal in code editor - <b>git clone url </b></p>
 <p>to add files use <b>git add file name </b>- if there is more files to be modified / added use <b>git add</b> .</p>
 <p><b>git add . (files added to staging area) - git commit -m "give commit message" - git push</b> </p>
 <p>to add branch name use <b>git branch</b> </p>
