pull origin main

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <p>to add new url <b>git remote add origin url</b> </p>
 <p>to know the status of the file use <b>git status</b></p>
 <p>to get the file modification in github to  personal copy use <b>git pull</b> </p>
+<p>to get changes done in main branch to pc use <b>git pull origin main</b></p>
 <p>if added new branch in terminal using <b>git branch -M </b> to get the branch name in github use the normal push <b>git push origin branch name(newly added in terminal)</b></p>
 
 </body>
