--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <P>Git install - verify email i'd and password </P>
 <p>open terminal in code editor</p>
 <p>github create account - create repository - create files or drag files </p>
+<p>To initialize a git repository use <b>git init</b></p>
+<p>To change the directory <b>git cd folder name</b></p>
 <p> to get codes from github to personal computer copy url in code - open terminal in code editor - <b>git clone url </b></p>
 <p>to add files use <b>git add file name </b>- if there is more files to be modified / added use <b>git add</b> .</p>
 <p><b>git add . (files added to staging area) - git commit -m "give commit message" - git push</b> </p>
